Hamburger menu button disappear in > medium size

--- a/nav-challenge-2/style.css
+++ b/nav-challenge-2/style.css
@@ -269,6 +269,9 @@ img {
   }
 
   /* Component styling -- Specific ones -- Header section*/
+  .nav-toggle {
+    display: none;
+  }
   .logo {
     /*border: 1px solid yellow;*/
     display: flex;
