--- a/nav-challenge-2/style.css
+++ b/nav-challenge-2/style.css
@@ -142,6 +142,10 @@ img {
   transform: translateY(2px);
 }
 */
+
+/* I can do animiation through max-height: https://css-tricks.com/using-css-transitions-auto-dimensions/
+   But then it become a bit tricky to deal with resize window to > medium size. So i didn't use it.
+*/
 .nav__list {
   display: none;
 }
